--- a/hello-world-api/composer.json
+++ b/hello-world-api/composer.json
@@ -9,7 +9,10 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "open-telemetry/exporter-otlp": "^1.0",
+        "open-telemetry/opentelemetry": "*",
+        "php-http/httplug": "^2.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
