replace traces with metrics

--- a/hello-world-api/composer.json
+++ b/hello-world-api/composer.json
@@ -11,7 +11,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "open-telemetry/api": "^1.0",
+        "open-telemetry/api": "*",
         "open-telemetry/exporter-otlp": "^1.0",
         "open-telemetry/opentelemetry": "*",
         "open-telemetry/sdk": "^1.0",
